Project1VS/force-app/main/default/objects/Payment_info__c/Payment_info__c.object-meta.xml
<CustomObject>
    <label>Payment info</label>
    <nameField>
        <label>Payment info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>