Project1VS/force-app/main/default/objects/Payment_info__c/fields/Credit_card_number__c.field-meta.xml
<CustomField>
    <fullName>Credit_card_number__c</fullName>
    <label>Credit card number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>