Project1VS/force-app/main/default/objects/Payment_info__c/fields/Credit_card_type__c.field-meta.xml
<CustomField>
    <fullName>Credit_card_type__c</fullName>
    <label>Credit card type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>