Project1VS/force-app/main/default/objects/Payment_info__c/fields/Expiration_month__c.field-meta.xml
<CustomField>
    <fullName>Expiration_month__c</fullName>
    <label>Expiration month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>