Project1VS/force-app/main/default/objects/Payment_Info__c/fields/Expiration_Month_MM__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Month_MM__c</fullName>
    <label>Expiration month (MM)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>