Project1VS/force-app/main/default/objects/Payment_info__c/fields/Expiration_year__c.field-meta.xml
<CustomField>
    <fullName>Expiration_year__c</fullName>
    <label>Expiration year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>