Project1VS/force-app/main/default/objects/Payment_Info__c/fields/Expiration_Year_YYYY__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Year_YYYY__c</fullName>
    <label>Expiration year (YYYY)</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>