Project1VS/force-app/main/default/objects/Payment_Info__c/fields/Used_By__c.field-meta.xml
<CustomField>
    <fullName>Used_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Used By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payment_Info</relationshipName>
    <type>Lookup</type>
</CustomField>