Project1VS/force-app/main/default/objects/Payment_Info__c/validationRules/American_Express_format.validationRule-meta.xml
<ValidationRule>
    <fullName>American_Express_format</fullName>
    <active>true</active>
    <description>When American Express is selected, card number
must be in ####-######-##### format.</description>
    <errorConditionFormula>ISPICKVAL( Credit_Card_Type__c ,&quot;American Express&quot;) &amp;&amp;
NOT( REGEX( Credit_Card_Number__c,
&quot;[0-9]{4}-[0-9]{6}-[0-9]{5}&quot;) )</errorConditionFormula>
    <errorDisplayField>Credit_Card_Number__c</errorDisplayField>
    <errorMessage>American Express card numbers must be in
####-######-##### format including dashes.</errorMessage>
</ValidationRule>