Project1VS/force-app/main/default/objects/Payment_Info__c/validationRules/Visa_Mastercard_Discover_format.validationRule-meta.xml
<ValidationRule>
    <fullName>Visa_Mastercard_Discover_format</fullName>
    <active>true</active>
    <description>When Visa, Mastercard, and Discover are
selected, card number must be in ####-####-####-####
format.</description>
    <errorConditionFormula>NOT(ISPICKVAL(Credit_Card_Type__c ,&quot;American Express&quot;))
&amp;&amp;
NOT(ISPICKVAL(Credit_Card_Type__c ,&quot;&quot;)) &amp;
NOT(REGEX( Credit_Card_Number__c,
&quot;[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}&quot;) )</errorConditionFormula>
    <errorDisplayField>Credit_Card_Number__c</errorDisplayField>
    <errorMessage>Visa, Mastercard, and Discover card numbers
must be in ####-####-####-#### format including dashes.</errorMessage>
</ValidationRule>